force-app/main/default/objects/Booth_Visit__c/Booth_Visit__c.object-meta.xml
<CustomObject>
    <description>Tracks booth visits at events, recording attendee interactions and notes for follow-up.</description>
    <label>Booth Visit</label>
    <nameField>
        <label>Visit Number</label>
        <type>AutoNumber</type>
        <displayFormat>BV-{000000}</displayFormat>
    </nameField>
    <pluralLabel>Booth Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>