force-app/main/default/objects/Booth_Visit__c/fields/Booth__c.field-meta.xml
<CustomField>
    <fullName>Booth__c</fullName>
    <label>Booth</label>
    <referenceTo>Booth__c</referenceTo>
    <relationshipLabel>Booth Visits</relationshipLabel>
    <relationshipName>Booth_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>