force-app/main/default/objects/Booth_Visit__c/fields/Related_Lead__c.field-meta.xml
<CustomField>
    <fullName>Related_Lead__c</fullName>
    <label>Related Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Booth Visits</relationshipLabel>
    <relationshipName>Booth_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>