force-app/main/default/objects/Booth_Visit__c/fields/Visit_Time__c.field-meta.xml
<CustomField>
    <fullName>Visit_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>DateTime field that defaults to current date/time on record creation</description>
    <label>Visit Time</label>
    <type>DateTime</type>
</CustomField>